<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.HomeActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/consortium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPreferencesName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/trader_s_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cdvElements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPreferencesName">

        <include
            android:id="@+id/incElements"
            layout="@layout/item_ressources_info" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_door_sliding_24"
        android:drawableTint="@color/white"
        android:text="@string/open"
        app:layout_constraintBottom_toTopOf="@+id/btnReload"
        app:layout_constraintEnd_toEndOf="@+id/btnReload"
        app:layout_constraintStart_toStartOf="@+id/btnReload" />

    <Button
        android:id="@+id/btnReload"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_cached_24"
        android:drawableTint="@color/white"
        android:text="@string/reload"
        app:layout_constraintBottom_toTopOf="@+id/btnUplaod"
        app:layout_constraintEnd_toEndOf="@+id/btnUplaod"
        app:layout_constraintStart_toStartOf="@+id/btnUplaod" />

    <Button
        android:id="@+id/btnUplaod"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/baseline_upload_24"
        android:drawableTint="@color/white"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>